--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 }
 
 body {
-	background-image: url("art.jpg");
+	background-image: url("https://catherineasquithgallery.com/uploads/posts/2021-03/1614723679_54-p-foni-dlya-odezhdi-68.jpg");
 	background-attachment: fixed;
 	background-size: cover;
 	background-position: center;
